hphp/hack/test/typecheck/constraint_newtype_param_type_advanced.php.exp
File "constraint_newtype_param_type_advanced.php", line 7, characters 26-35:
Some type arguments violate their constraints (Typing[4323])
  File "constraint_newtype_param_type_advanced.php", line 3, characters 11-11:
  `T` is a constrained type parameter
  File "constraint_newtype_param_type_advanced.php", line 3, characters 16-23:
  This type constraint is violated
  File "constraint_newtype_param_type_advanced.php", line 3, characters 16-23:
  Expected `arraykey`
  File "constraint_newtype_param_type_advanced.php", line 7, characters 28-34:
  But got `T`
  File "constraint_newtype_param_type_advanced.php", line 4, characters 15-15:
    via this generic `T`
File "constraint_newtype_param_type_advanced.php", line 7, characters 28-34:
Some type arguments violate their constraints (Typing[4323])
  File "constraint_newtype_param_type_advanced.php", line 3, characters 11-11:
  `T` is a constrained type parameter
  File "constraint_newtype_param_type_advanced.php", line 3, characters 16-23:
  This type constraint is violated
  File "constraint_newtype_param_type_advanced.php", line 3, characters 16-23:
  Expected `arraykey`
  File "constraint_newtype_param_type_advanced.php", line 7, characters 30-33:
  But got `T`
  File "constraint_newtype_param_type_advanced.php", line 4, characters 15-15:
    via this generic `T`
File "constraint_newtype_param_type_advanced.php", line 7, characters 30-33:
Some type arguments violate their constraints (Typing[4323])
  File "constraint_newtype_param_type_advanced.php", line 3, characters 11-11:
  `T` is a constrained type parameter
  File "constraint_newtype_param_type_advanced.php", line 3, characters 16-23:
  This type constraint is violated
  File "constraint_newtype_param_type_advanced.php", line 3, characters 16-23:
  Expected `arraykey`
  File "constraint_newtype_param_type_advanced.php", line 7, characters 32-32:
  But got `T`
  File "constraint_newtype_param_type_advanced.php", line 4, characters 15-15:
    via this generic `T`
